@@ -41,6 +41,7 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.10.0')
     testImplementation('org.mockito:mockito-core:5.4.0')
     testImplementation('org.mockito:mockito-junit-jupiter:5.4.0')
+    testImplementation('org.apache.arrow:arrow-memory-netty:12.0.1')
     testImplementation('nl.jqno.equalsverifier:equalsverifier:3.15')
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.10.0')
 
@@ -52,6 +53,7 @@ test {
     testLogging {
         events "passed", "skipped", "failed"
     }
+    jvmArgs("--add-opens=java.base/java.nio=ALL-UNNAMED")
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
